Изменена спека и сгенерированы новые эндпоинты
